# rism3d

./: .gitignore  NOTES.txt  README.md  TODO.txt  __init__.py  binding_energy.py  box.py  exceptions.py  fourier.py  mdiis.py  picard.py  potentials.py  pyproject.toml  rism3d.py  sfe.py  solute.py  solution_components.py  solvent.py  telescope.py  utils.py
src/rism3d/: __init__.py  amberParm.py  box.py  constants.py  exceptions.py  fourier_bessel.py  intramolecular_correlation_matrix.py  opendx.py  picard.py  potentials.py  rism3d.py  solute.py  solvent.py  utils.py
tests/integration/: suppress_output.py  test_mdiis_solver.py  test_picard_solver.py
tests/integration/fixtures/: acetic_acid.crd  acetic_acid.top  water.xvv
